update SectionHero's model, controller, view

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -1,3 +1,6 @@
+/** Import slick-carousel */
+@import "~slick-carousel/slick/slick";
+
 /**
  * This injects Tailwind's base styles, which is a combination of
  * Normalize.css and some additional base styles.
